--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
     <main class="main">
         <section class="upgrade-bar">
+            <div class="upgrade">
+                EFFETTUA L'UPGRADE
+            </div>
 
         </section>
 
