--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
             <div class="flex-icon"><img class="icons" src="img/home.svg" alt="Home"> Home</div>
             <div class="flex-icon"><img class="icons" src="img/search.svg" alt="Home"> Cerca</div>
             <div class="flex-icon"><img class="icons" src="img/libreria.svg" alt="Home"> La tua libreria</div>
+
+            <ul class="aside-bar-list">PLAYLIST
+                <li class="crea-playlist"><i class="fas fa-plus-square"></i> Crea Playlist</li>
+
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+            </ul>
             
             
 
