--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
                 <li>Nome Playlist</li>
                 <li>Nome Playlist</li>
             </ul>
+
+            <div class="utente">
+                <div class="instal"><img class="dwld" src="img/download.svg" alt="Installazione"> Installa app</div>
+                <div class="gray-br"></div>
+
+                <div class="instal"><img class="dwld profile" src="img/profile.svg" alt="Installazione"> Jonh Doe</div>
+            </div>
             
             
 
