completo il footer

--- a/index.html
+++ b/index.html
@@ -181,7 +181,31 @@
                     <i class="far fa-heart icone-foot"></i>
                     <i class="far fa-folder icone-foot"></i>
                 </div>
-                
+
+            </div>
+
+            <div class="col-center-foot">
+                <div class="icons-row">
+                    <i class="cent-ic fas fa-random"></i>
+                    <i class="cent-ic fas fa-caret-left"></i>
+                    <i class="cent-ic far fa-play-circle"></i>
+                    <i class="cent-ic fas fa-caret-right"></i>
+                    <i class="cent-ic fas fa-redo-alt"></i>
+                </div>
+
+                <div class="time-song">
+                    <span class="timing">0:25</span>
+                    <div class="row-time"></div>
+                    <span class="timingcent-ic ">4:35</span>
+                </div>
+
+            </div>
+
+            <div class="col-right-foot">
+                <i class="fas fa-list icon-rgt"></i>
+                <i class="fas fa-tv icon-rgt"></i>
+                <i class="fas fa-volume-up icon-rgt"></i>
+                <div class="row-volume"></div>
             </div>
 
 
