completo il layout

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="card">
                         <img class="album-img" src="img/stranger.jpeg" alt="album musicale">
                         <h4>Stranger Things Vol.1 (a Netflix Original Series Soundtrack)</h4>
-                        <h5>Kyle Dixon</h5>
+                        <h5>Kyle Dixon & Michael Stein</h5>
                     </div>
 
                     <div class="card">
@@ -196,7 +196,7 @@
                 <div class="time-song">
                     <span class="timing">0:25</span>
                     <div class="row-time"></div>
-                    <span class="timingcent-ic ">4:35</span>
+                    <span class="timing">4:35</span>
                 </div>
 
             </div>
