trasformo tutti gli elementi in relativi button, e creo un transition effect all'upgrade

--- a/index.html
+++ b/index.html
@@ -78,59 +78,59 @@
             </nav>
 
             <div class="conteiner-music">
-                <h2>Recently Played</h2>
+                <button><h2>Recently Played</h2></button>
                 <div class="music-row rec-played">
                     <div class="card">
-                        <img class="album-img" src="img/metal_lifting.jpg" alt="album musicale">
-                        <h4>Heavy Metal</h4>
+                        <button><img class="album-img" src="img/metal_lifting.jpg" alt="album musicale"></button>
+                        <button><h4>Heavy Metal</h4></button>
                         <h5>Subtitle</h5>
                     </div>
 
                     <div class="card">
                         <img class="album-img" src="img/stranger.jpeg" alt="album musicale">
-                        <h4>Stranger Things Vol.1 (a Netflix Original Series Soundtrack)</h4>
-                        <h5>Kyle Dixon & Michael Stein</h5>
+                        <button><h4>Stranger Things Vol.1 (a Netflix Original Series Soundtrack)</h4></button>
+                        <button><h5>Kyle Dixon & Michael Stein</h5></button>
                     </div>
 
                     <div class="card">
-                        <img class="album-img" src="img/aquietplace.jpeg" alt="album musicale">
-                        <h4>A quit place</h4>
+                        <button><img class="album-img" src="img/aquietplace.jpeg" alt="album musicale"></button>
+                        <button><h4>A quit place</h4></button>
                         <h5>Subtitle</h5>
                     </div>
 
                     <div class="card">
-                        <img class="album-img" src="img/split.jpeg" alt="album musicale">
-                        <h4>Split</h4>
+                        <button><img class="album-img" src="img/split.jpeg" alt="album musicale"></button>
+                        <button><h4>Split</h4></button>
                         <h5>Subtitle</h5>
                     </div>
 
                     <div class="card">
-                        <img class="album-img" src="img/cure.jpeg" alt="album musicale">
-                        <h4>A cure for wellness</h4>
+                        <button><img class="album-img" src="img/cure.jpeg" alt="album musicale"></button>
+                        <button><h4>A cure for wellness</h4></button>
                         <h5>Subtitle</h5>
                     </div>
 
                     <div class="card">
-                        <img class="album-img" src="img/sinister.jpeg" alt="album musicale">
-                        <h4>Sinister</h4>
+                        <button><img class="album-img" src="img/sinister.jpeg" alt="album musicale"></button>
+                        <button><h4>Sinister</h4></button>
                         <h5>Subtitle</h5>
                     </div>
 
                 </div>
 
                 <div>
-                    <h2>Creato per Jonh Don</h2>
+                    <button><h2>Creato per Jonh Don</h2></button>
                     <h5 class="subtitle-user-music">Più ascolti, più accurati saranno i suggerimenti.</h5>
                     <div class="music-row rec-played">
                         <div class="card">
-                            <img class="album-img" src="img/radar.jpeg" alt="album musicale">
-                            <h4>Release Radar</h4>
+                            <button><img class="album-img" src="img/radar.jpeg" alt="album musicale"></button>
+                            <button><h4>Release Radar</h4></button>
 
                         </div>
 
                         <div class="card">
-                            <img class="album-img" src="img/mixdaily.jpeg" alt="album musicale">
-                            <h4>Daily Mix 1</h4>
+                            <button><img class="album-img" src="img/mixdaily.jpeg" alt="album musicale"></button>
+                            <button><h4>Daily Mix 1</h4></button>
 
                         </div>
 
@@ -138,18 +138,18 @@
                 </div>
 
                 <div>
-                    <h2>Artisti più popolari</h2>
+                    <button><h2>Artisti più popolari</h2></button>
                     <h5 class="subtitle-user-music">Più ascolti, più accurati saranno i suggerimenti.</h5>
                     <div class="music-row rec-played">
                         <div class="card">
-                            <img class="album-img circle" src="img/youg.jpeg" alt="album musicale">
-                            <h4>Lana del Rey</h4>
+                            <button><img class="album-img circle" src="img/youg.jpeg" alt="album musicale"></button>
+                            <button><h4>Lana del Rey</h4></button>
 
                         </div>
 
                         <div class="card">
-                            <img class="album-img circle" src="img/einaudi.jpeg" alt="album musicale">
-                            <h4>Ludovico Einaudi</h4>
+                            <button><img class="album-img circle" src="img/einaudi.jpeg" alt="album musicale"></button>
+                            <button><h4>Ludovico Einaudi</h4></button>
 
                         </div>
 
@@ -178,34 +178,34 @@
                 </div>
 
                 <div class="cont-icons">
-                    <i class="far fa-heart icone-foot"></i>
-                    <i class="far fa-folder icone-foot"></i>
+                    <button><i class="far fa-heart icone-foot"></i></button>
+                    <button><i class="far fa-folder icone-foot"></i></button>
                 </div>
 
             </div>
 
             <div class="col-center-foot">
                 <div class="icons-row">
-                    <i class="cent-ic fas fa-random"></i>
-                    <i class="cent-ic fas fa-caret-left"></i>
-                    <i class="cent-ic far fa-play-circle"></i>
-                    <i class="cent-ic fas fa-caret-right"></i>
-                    <i class="cent-ic fas fa-redo-alt"></i>
+                    <button><i class="cent-ic fas fa-random"></i></button>
+                    <button><i class="cent-ic fas fa-caret-left"></i></button>
+                    <button><i class="cent-ic far fa-play-circle"></i></button>
+                    <button><i class="cent-ic fas fa-caret-right"></i></button>
+                    <button><i class="cent-ic fas fa-redo-alt"></i></button>
                 </div>
 
                 <div class="time-song">
                     <span class="timing">0:25</span>
-                    <div class="row-time"></div>
+                    <button><div class="row-time"></div></button>
                     <span class="timing">4:35</span>
                 </div>
 
             </div>
 
             <div class="col-right-foot">
-                <i class="fas fa-list icon-rgt"></i>
-                <i class="fas fa-tv icon-rgt"></i>
-                <i class="fas fa-volume-up icon-rgt"></i>
-                <div class="row-volume"></div>
+                <button><i class="fas fa-list icon-rgt"></i></button>
+                <button><i class="fas fa-tv icon-rgt"></i></button>
+                <button><i class="fas fa-volume-up icon-rgt"></i></button>
+                <button><div class="row-volume"></div></button>
             </div>
 
 
