--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
                         <img class="logo" src="img/logo.svg" alt="Logo"></button>
                 </div>
 
-                <div class="flex-icon"><button><img class="icons" src="img/home.svg" alt="Home"> Home</button></div>
-                <div class="flex-icon"><button><img class="icons" src="img/search.svg" alt="Home"> Cerca</button></div>
-                <div class="flex-icon"><button><img class="icons" src="img/libreria.svg" alt="Home"> La tua
+                <div class="flex-icon"><button class="hover-white"><img class="icons" src="img/home.svg" alt="Home"> Home</button></div>
+                <div class="flex-icon"><button class="hover-white"><img class="icons" src="img/search.svg" alt="Home"> Cerca</button></div>
+                <div class="flex-icon"><button class="hover-white"><img class="icons" src="img/libreria.svg" alt="Home"> La tua
                         libreria</button></div>
 
 
                 <ul class="aside-bar-list">PLAYLIST
-                    <li class="crea-playlist"><button><i class="fas fa-plus-square"></i> Crea Playlist</button></li>
+                    <li class="crea-playlist"><button class="hover-white"><i class="fas fa-plus-square"></i> Crea Playlist</button></li>
 
-                    <li><button>Nome Playlist</button></li>
-                    <li><button>Nome Playlist</button></li>
-                    <li><button>Nome Playlist</button></li>
-                    <li><button>Nome Playlist</button></li>
-                    <li><button>Nome Playlist</button></li>
-                    <li><button>Nome Playlist</button></li>
-                    <li><button>Nome Playlist</button></li>
+                    <li><button class="hover-white">Nome Playlist</button></li>
+                    <li><button class="hover-white">Nome Playlist</button></li>
+                    <li><button class="hover-white">Nome Playlist</button></li>
+                    <li><button class="hover-white">Nome Playlist</button></li>
+                    <li><button class="hover-white">Nome Playlist</button></li>
+                    <li><button class="hover-white">Nome Playlist</button></li>
+                    <li><button class="hover-white">Nome Playlist</button></li>
                 </ul>
             </div>
 
             <div class="utente">
-                <div class="instal"><button><img class="dwld" src="img/download.svg" alt="Installazione"> Installa
+                <div class="instal"><button class="hover-white"><img class="dwld" src="img/download.svg" alt="Installazione"> Installa
                         app</button></div>
                 <div class="gray-br"></div>
 
@@ -66,13 +66,13 @@
         <section class="page">
             <nav class="navbar">
                 <ul class="navbar-ul">
-                    <li class="navbar-li"> <button>IN EVIDENZA</button> </li>
-                    <li class="navbar-li"><button>PODCAST</button>
+                    <li class="navbar-li"> <button class="hover-white">IN EVIDENZA</button> </li>
+                    <li class="navbar-li"><button class="hover-white">PODCAST</button>
                     </li>
-                    <li class="navbar-li"><button>CLASSIFICHE</button></li>
-                    <li class="navbar-li"><button>GENERI E MOOD</button></li>
-                    <li class="navbar-li"><button>NUOVE USCITE</button></li>
-                    <li class="navbar-li"><button>SCOPRI</button></li>
+                    <li class="navbar-li"><button class="hover-white">CLASSIFICHE</button></li>
+                    <li class="navbar-li"><button class="hover-white">GENERI E MOOD</button></li>
+                    <li class="navbar-li"><button class="hover-white">NUOVE USCITE</button></li>
+                    <li class="navbar-li"><button class="hover-white">SCOPRI</button></li>
 
                 </ul>
             </nav>
@@ -87,7 +87,7 @@
                     </div>
 
                     <div class="card">
-                        <img class="album-img" src="img/stranger.jpeg" alt="album musicale">
+                        <button><img class="album-img" src="img/stranger.jpeg" alt="album musicale"></button>
                         <button><h4>Stranger Things Vol.1 (a Netflix Original Series Soundtrack)</h4></button>
                         <button><h5>Kyle Dixon & Michael Stein</h5></button>
                     </div>
