--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <img class="logo" src="img/logo.svg" alt="Logo"></button>
                 </div>
 
-                <div class="flex-icon"><button class="hover-white"><img class="icons" src="img/home.svg" alt="Home"> Home</button></div>
+                <div class="flex-icon bianca"><button class="hover-white"><img class="icons" src="img/home.svg" alt="Home"> Home</button></div>
                 <div class="flex-icon"><button class="hover-white"><img class="icons" src="img/search.svg" alt="Home"> Cerca</button></div>
                 <div class="flex-icon"><button class="hover-white"><img class="icons" src="img/libreria.svg" alt="Home"> La tua
                         libreria</button></div>
@@ -178,8 +178,8 @@
                 </div>
 
                 <div class="cont-icons">
-                    <button><i class="far fa-heart icone-foot"></i></button>
-                    <button><i class="far fa-folder icone-foot"></i></button>
+                    <button ><i class="far fa-heart icone-foot hover-white"></i></button>
+                    <button><i class="far fa-folder icone-foot hover-white"></i></button>
                 </div>
 
             </div>
@@ -188,7 +188,7 @@
                 <div class="icons-row">
                     <button><i class="cent-ic fas fa-random"></i></button>
                     <button><i class="cent-ic fas fa-caret-left"></i></button>
-                    <button><i class="cent-ic far fa-play-circle"></i></button>
+                    <button><i class="cent-ic far fa-play-circle hover-play"></i></button>
                     <button><i class="cent-ic fas fa-caret-right"></i></button>
                     <button><i class="cent-ic fas fa-redo-alt"></i></button>
                 </div>
