inserisco effetto hover su album

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <button><h2>Recently Played</h2></button>
                 <div class="music-row rec-played">
                     <div class="card">
-                        <button><img class="album-img" src="img/metal_lifting.jpg" alt="album musicale"></button>
+                        <button class="play-hover-song"><div class="position-relative"><img class="album-img" src="img/metal_lifting.jpg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
                         <button><h4>Heavy Metal</h4></button>
                         <h5>Subtitle</h5>
                     </div>
