--- a/index.html
+++ b/index.html
@@ -87,31 +87,31 @@
                     </div>
 
                     <div class="card">
-                        <button><img class="album-img" src="img/stranger.jpeg" alt="album musicale"></button>
+                        <button class="play-hover-song"><div class="position-relative"><img class="album-img" src="img/stranger.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
                         <button><h4>Stranger Things Vol.1 (a Netflix Original Series Soundtrack)</h4></button>
                         <button><h5>Kyle Dixon & Michael Stein</h5></button>
                     </div>
 
                     <div class="card">
-                        <button><img class="album-img" src="img/aquietplace.jpeg" alt="album musicale"></button>
+                        <button class="play-hover-song"><div class="position-relative"><img class="album-img" src="img/aquietplace.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
                         <button><h4>A quit place</h4></button>
                         <h5>Subtitle</h5>
                     </div>
 
                     <div class="card">
-                        <button><img class="album-img" src="img/split.jpeg" alt="album musicale"></button>
+                        <button class="play-hover-song"><div class="position-relative"><img class="album-img" src="img/split.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
                         <button><h4>Split</h4></button>
                         <h5>Subtitle</h5>
                     </div>
 
                     <div class="card">
-                        <button><img class="album-img" src="img/cure.jpeg" alt="album musicale"></button>
+                        <button class="play-hover-song"><div class="position-relative"><img class="album-img" src="img/cure.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
                         <button><h4>A cure for wellness</h4></button>
                         <h5>Subtitle</h5>
                     </div>
 
                     <div class="card">
-                        <button><img class="album-img" src="img/sinister.jpeg" alt="album musicale"></button>
+                        <button class="play-hover-song"><div class="position-relative"><img class="album-img" src="img/sinister.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
                         <button><h4>Sinister</h4></button>
                         <h5>Subtitle</h5>
                     </div>
@@ -123,13 +123,13 @@
                     <h5 class="subtitle-user-music">Più ascolti, più accurati saranno i suggerimenti.</h5>
                     <div class="music-row rec-played">
                         <div class="card">
-                            <button><img class="album-img" src="img/radar.jpeg" alt="album musicale"></button>
+                            <button class="play-hover-song"><div class="position-relative"><img class="album-img" src="img/radar.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
                             <button><h4>Release Radar</h4></button>
 
                         </div>
 
                         <div class="card">
-                            <button><img class="album-img" src="img/mixdaily.jpeg" alt="album musicale"></button>
+                            <button class="play-hover-song"><div class="position-relative"><img class="album-img" src="img/mixdaily.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
                             <button><h4>Daily Mix 1</h4></button>
 
                         </div>
@@ -142,13 +142,13 @@
                     <h5 class="subtitle-user-music">Più ascolti, più accurati saranno i suggerimenti.</h5>
                     <div class="music-row rec-played">
                         <div class="card">
-                            <button><img class="album-img circle" src="img/youg.jpeg" alt="album musicale"></button>
+                            <button class="play-hover-song"><div class="position-relative"><img class="album-img circle" src="img/youg.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
                             <button><h4>Lana del Rey</h4></button>
 
                         </div>
 
                         <div class="card">
-                            <button><img class="album-img circle" src="img/einaudi.jpeg" alt="album musicale"></button>
+                            <button class="play-hover-song"><div class="position-relative"><img class="album-img circle" src="img/einaudi.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
                             <button><h4>Ludovico Einaudi</h4></button>
 
                         </div>
