sistemo barre volume e tempo

--- a/index.html
+++ b/index.html
@@ -195,7 +195,12 @@
 
                 <div class="time-song">
                     <span class="timing">0:25</span>
-                    <button><div class="row-time"></div></button>
+                    <button><div class="row-time">
+                              <div class="row-time-live">
+                                                                 
+                              </div>
+                            </div>
+                    </button>
                     <span class="timing">4:35</span>
                 </div>
 
@@ -205,7 +210,12 @@
                 <button><i class="fas fa-list icon-rgt"></i></button>
                 <button><i class="fas fa-tv icon-rgt"></i></button>
                 <button><i class="fas fa-volume-up icon-rgt"></i></button>
-                <button><div class="row-volume"></div></button>
+                <button><div class="row-volume">
+                             <div class="row-volume-live">
+                                 
+                             </div>
+                       </div>
+                </button>
             </div>
 
 
