--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <span class="timing">0:25</span>
                     <button><div class="row-time">
                               <div class="row-time-live">
-                                                                 
+                                  <span class="row-time-live-circle"></span>                                                               
                               </div>
                             </div>
                     </button>
@@ -212,7 +212,7 @@
                 <button><i class="fas fa-volume-up icon-rgt"></i></button>
                 <button><div class="row-volume">
                              <div class="row-volume-live">
-                                 
+                                <span class="row-volume-live-circle"></span>
                              </div>
                        </div>
                 </button>
