inserisco barra sotto in evidenza button

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <section class="page">
             <nav class="navbar">
                 <ul class="navbar-ul">
-                    <li class="navbar-li"> <button class="hover-white">IN EVIDENZA</button> </li>
+                    <li class="navbar-li bar-relative"> <button class="hover-white">IN EVIDENZA</button><div class="bar-absolute"></div> </li>
                     <li class="navbar-li"><button class="hover-white">PODCAST</button>
                     </li>
                     <li class="navbar-li"><button class="hover-white">CLASSIFICHE</button></li>
