aggiungo barra tasto home

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <img class="logo" src="img/logo.svg" alt="Logo"></button>
                 </div>
 
-                <div class="flex-icon bianca"><button class="hover-white"><img class="icons" src="img/home.svg" alt="Home"> Home</button></div>
+                <div class="flex-icon bianca bar-relative"><div class="bar-absolute2"></div><button class="hover-white"><img class="icons" src="img/home.svg" alt="Home"> Home</button></div>
                 <div class="flex-icon"><button class="hover-white"><img class="icons" src="img/search.svg" alt="Home"> Cerca</button></div>
                 <div class="flex-icon"><button class="hover-white"><img class="icons" src="img/libreria.svg" alt="Home"> La tua
                         libreria</button></div>
