--- a/index.html
+++ b/index.html
@@ -20,14 +20,20 @@
                         <img class="logo" src="img/logo.svg" alt="Logo"></button>
                 </div>
 
-                <div class="flex-icon bianca bar-relative"><div class="bar-absolute2"></div><button class="hover-white"><img class="icons" src="img/home.svg" alt="Home"> Home</button></div>
-                <div class="flex-icon"><button class="hover-white"><img class="icons" src="img/search.svg" alt="Home"> Cerca</button></div>
-                <div class="flex-icon"><button class="hover-white"><img class="icons" src="img/libreria.svg" alt="Home"> La tua
+                <div class="flex-icon bianca bar-relative">
+                    <div class="bar-absolute2"></div><button class="hover-white"><img class="icons" src="img/home.svg"
+                            alt="Home"> Home</button>
+                </div>
+                <div class="flex-icon"><button class="hover-white"><img class="icons" src="img/search.svg" alt="Home">
+                        Cerca</button></div>
+                <div class="flex-icon"><button class="hover-white"><img class="icons" src="img/libreria.svg" alt="Home">
+                        La tua
                         libreria</button></div>
 
 
                 <ul class="aside-bar-list">PLAYLIST
-                    <li class="crea-playlist"><button class="hover-white"><i class="fas fa-plus-square"></i> Crea Playlist</button></li>
+                    <li class="crea-playlist"><button class="hover-white"><i class="fas fa-plus-square"></i> Crea
+                            Playlist</button></li>
 
                     <li><button class="hover-white">Nome Playlist</button></li>
                     <li><button class="hover-white">Nome Playlist</button></li>
@@ -40,7 +46,8 @@
             </div>
 
             <div class="utente">
-                <div class="instal"><button class="hover-white"><img class="dwld" src="img/download.svg" alt="Installazione"> Installa
+                <div class="instal"><button class="hover-white"><img class="dwld" src="img/download.svg"
+                            alt="Installazione"> Installa
                         app</button></div>
                 <div class="gray-br"></div>
 
@@ -66,7 +73,9 @@
         <section class="page">
             <nav class="navbar">
                 <ul class="navbar-ul">
-                    <li class="navbar-li bar-relative"> <button class="hover-white">IN EVIDENZA</button><div class="bar-absolute"></div> </li>
+                    <li class="navbar-li bar-relative"> <button class="hover-white">IN EVIDENZA</button>
+                        <div class="bar-absolute"></div>
+                    </li>
                     <li class="navbar-li"><button class="hover-white">PODCAST</button>
                     </li>
                     <li class="navbar-li"><button class="hover-white">CLASSIFICHE</button></li>
@@ -78,59 +87,105 @@
             </nav>
 
             <div class="conteiner-music">
-                <button><h2>Recently Played</h2></button>
+                <button>
+                    <h2>Recently Played</h2>
+                </button>
                 <div class="music-row rec-played">
                     <div class="card">
-                        <button class="play-hover-song"><div class="position-relative"><img class="album-img" src="img/metal_lifting.jpg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
-                        <button><h4>Heavy Metal</h4></button>
+                        <button class="play-hover-song">
+                            <div class="position-relative"><img class="album-img" src="img/metal_lifting.jpg"
+                                    alt="album musicale"><i class="far fa-play-circle positionated"></i></div>
+                        </button>
+                        <button>
+                            <h4>Heavy Metal</h4>
+                        </button>
                         <h5>Subtitle</h5>
                     </div>
 
                     <div class="card">
-                        <button class="play-hover-song"><div class="position-relative"><img class="album-img" src="img/stranger.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
-                        <button><h4>Stranger Things Vol.1 (a Netflix Original Series Soundtrack)</h4></button>
-                        <button><h5>Kyle Dixon & Michael Stein</h5></button>
+                        <button class="play-hover-song">
+                            <div class="position-relative"><img class="album-img" src="img/stranger.jpeg"
+                                    alt="album musicale"><i class="far fa-play-circle positionated"></i></div>
+                        </button>
+                        <button>
+                            <h4>Stranger Things Vol.1 (a Netflix Original Series Soundtrack)</h4>
+                        </button>
+                        <button>
+                            <h5>Kyle Dixon & Michael Stein</h5>
+                        </button>
                     </div>
 
                     <div class="card">
-                        <button class="play-hover-song"><div class="position-relative"><img class="album-img" src="img/aquietplace.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
-                        <button><h4>A quit place</h4></button>
+                        <button class="play-hover-song">
+                            <div class="position-relative"><img class="album-img" src="img/aquietplace.jpeg"
+                                    alt="album musicale"><i class="far fa-play-circle positionated"></i></div>
+                        </button>
+                        <button>
+                            <h4>A quit place</h4>
+                        </button>
                         <h5>Subtitle</h5>
                     </div>
 
                     <div class="card">
-                        <button class="play-hover-song"><div class="position-relative"><img class="album-img" src="img/split.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
-                        <button><h4>Split</h4></button>
+                        <button class="play-hover-song">
+                            <div class="position-relative"><img class="album-img" src="img/split.jpeg"
+                                    alt="album musicale"><i class="far fa-play-circle positionated"></i></div>
+                        </button>
+                        <button>
+                            <h4>Split</h4>
+                        </button>
                         <h5>Subtitle</h5>
                     </div>
 
                     <div class="card">
-                        <button class="play-hover-song"><div class="position-relative"><img class="album-img" src="img/cure.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
-                        <button><h4>A cure for wellness</h4></button>
+                        <button class="play-hover-song">
+                            <div class="position-relative"><img class="album-img" src="img/cure.jpeg"
+                                    alt="album musicale"><i class="far fa-play-circle positionated"></i></div>
+                        </button>
+                        <button>
+                            <h4>A cure for wellness</h4>
+                        </button>
                         <h5>Subtitle</h5>
                     </div>
 
                     <div class="card">
-                        <button class="play-hover-song"><div class="position-relative"><img class="album-img" src="img/sinister.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
-                        <button><h4>Sinister</h4></button>
+                        <button class="play-hover-song">
+                            <div class="position-relative"><img class="album-img" src="img/sinister.jpeg"
+                                    alt="album musicale"><i class="far fa-play-circle positionated"></i></div>
+                        </button>
+                        <button>
+                            <h4>Sinister</h4>
+                        </button>
                         <h5>Subtitle</h5>
                     </div>
 
                 </div>
 
                 <div>
-                    <button><h2>Creato per Jonh Don</h2></button>
+                    <button>
+                        <h2>Creato per Jonh Don</h2>
+                    </button>
                     <h5 class="subtitle-user-music">Più ascolti, più accurati saranno i suggerimenti.</h5>
                     <div class="music-row rec-played">
                         <div class="card">
-                            <button class="play-hover-song"><div class="position-relative"><img class="album-img" src="img/radar.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
-                            <button><h4>Release Radar</h4></button>
+                            <button class="play-hover-song">
+                                <div class="position-relative"><img class="album-img" src="img/radar.jpeg"
+                                        alt="album musicale"><i class="far fa-play-circle positionated"></i></div>
+                            </button>
+                            <button>
+                                <h4>Release Radar</h4>
+                            </button>
 
                         </div>
 
                         <div class="card">
-                            <button class="play-hover-song"><div class="position-relative"><img class="album-img" src="img/mixdaily.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
-                            <button><h4>Daily Mix 1</h4></button>
+                            <button class="play-hover-song">
+                                <div class="position-relative"><img class="album-img" src="img/mixdaily.jpeg"
+                                        alt="album musicale"><i class="far fa-play-circle positionated"></i></div>
+                            </button>
+                            <button>
+                                <h4>Daily Mix 1</h4>
+                            </button>
 
                         </div>
 
@@ -138,18 +193,30 @@
                 </div>
 
                 <div>
-                    <button><h2>Artisti più popolari</h2></button>
+                    <button>
+                        <h2>Artisti più popolari</h2>
+                    </button>
                     <h5 class="subtitle-user-music">Più ascolti, più accurati saranno i suggerimenti.</h5>
                     <div class="music-row rec-played">
                         <div class="card">
-                            <button class="play-hover-song"><div class="position-relative"><img class="album-img circle" src="img/youg.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
-                            <button><h4>Lana del Rey</h4></button>
+                            <button class="play-hover-song">
+                                <div class="position-relative"><img class="album-img circle" src="img/youg.jpeg"
+                                        alt="album musicale"><i class="far fa-play-circle positionated"></i></div>
+                            </button>
+                            <button>
+                                <h4>Lana del Rey</h4>
+                            </button>
 
                         </div>
 
                         <div class="card">
-                            <button class="play-hover-song"><div class="position-relative"><img class="album-img circle" src="img/einaudi.jpeg" alt="album musicale"><i class="far fa-play-circle positionated"></i></div></button>
-                            <button><h4>Ludovico Einaudi</h4></button>
+                            <button class="play-hover-song">
+                                <div class="position-relative"><img class="album-img circle" src="img/einaudi.jpeg"
+                                        alt="album musicale"><i class="far fa-play-circle positionated"></i></div>
+                            </button>
+                            <button>
+                                <h4>Ludovico Einaudi</h4>
+                            </button>
 
                         </div>
 
@@ -178,7 +245,7 @@
                 </div>
 
                 <div class="cont-icons">
-                    <button ><i class="far fa-heart icone-foot hover-white"></i></button>
+                    <button><i class="far fa-heart icone-foot hover-white"></i></button>
                     <button><i class="far fa-folder icone-foot hover-white"></i></button>
                 </div>
 
@@ -195,11 +262,12 @@
 
                 <div class="time-song">
                     <span class="timing">0:25</span>
-                    <button><div class="row-time">
-                              <div class="row-time-live">
-                                  <span class="row-time-live-circle"></span>                                                               
-                              </div>
+                    <button class="button-larghezza">
+                        <div class="row-time">
+                            <div class="row-time-live">
+                                <span class="row-time-live-circle"></span>
                             </div>
+                        </div>
                     </button>
                     <span class="timing">4:35</span>
                 </div>
@@ -210,11 +278,12 @@
                 <button><i class="fas fa-list icon-rgt"></i></button>
                 <button><i class="fas fa-tv icon-rgt"></i></button>
                 <button><i class="fas fa-volume-up icon-rgt"></i></button>
-                <button><div class="row-volume">
-                             <div class="row-volume-live">
-                                <span class="row-volume-live-circle"></span>
-                             </div>
-                       </div>
+                <button>
+                    <div class="row-volume">
+                        <div class="row-volume-live">
+                            <span class="row-volume-live-circle"></span>
+                        </div>
+                    </div>
                 </button>
             </div>
 
