finisco le query

--- a/index.html
+++ b/index.html
@@ -16,22 +16,26 @@
         <div class="aside-section">
 
             <div class="top-asidebar">
-                <div class="logo"><button>
-                        <img class="logo" src="img/logo.svg" alt="Logo"></button>
+                <div class="logo-row"><button>
+                        <img class="logo display-none" src="img/logo.svg" alt="Logo">
+
+                        <img class="logo-none" src="img/logo-small.svg" alt="Logo Simbolo">
+                    
+                    </button>
                 </div>
 
                 <div class="flex-icon bianca bar-relative">
                     <div class="bar-absolute2"></div><button class="hover-white"><img class="icons" src="img/home.svg"
-                            alt="Home"> Home</button>
+                            alt="Home"> <span class="display-none"> Home</span></button>
                 </div>
                 <div class="flex-icon"><button class="hover-white"><img class="icons" src="img/search.svg" alt="Home">
-                        Cerca</button></div>
+                        <span class="display-none"> Cerca</span></button></div>
                 <div class="flex-icon"><button class="hover-white"><img class="icons" src="img/libreria.svg" alt="Home">
-                        La tua
-                        libreria</button></div>
+                        <span class="display-none"> La tua
+                        libreria</span></button></div>
 
 
-                <ul class="aside-bar-list">PLAYLIST
+                <ul class="aside-bar-list display-none">PLAYLIST
                     <li class="crea-playlist"><button class="hover-white"><i class="fas fa-plus-square"></i> Crea
                             Playlist</button></li>
 
@@ -47,12 +51,11 @@
 
             <div class="utente">
                 <div class="instal"><button class="hover-white"><img class="dwld" src="img/download.svg"
-                            alt="Installazione"> Installa
-                        app</button></div>
-                <div class="gray-br"></div>
+                            alt="Installazione"> <span class="display-none">Installa app</span></button></div>
+                <div class="gray-br display-none"></div>
 
                 <div class="instal user"> <button><img class="dwld profile" src="img/profile.svg" alt="Installazione">
-                        Jonh Doe</button></div>
+                        <span class="display-none"> Jonh Doe</span></button></div>
             </div>
 
         </div>
