--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
     <main class="main">
         <section class="upgrade-bar">
+            <div class="animation-row"><i class="fas fa-arrow-right"></i></div>
             <button>
                 <div class="upgrade">
                     EFFETTUA L'UPGRADE
